parser/tests/bad/function_analysis.cgo
package test

import "fmt"

type testInt struct{
    i int
}

type Integer testInt


func test() *int{
    return 0
}

func NewInteger() *testInt{
    return &Integer{1}
}
